# bsw-project-template

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
_shared/: bootstrap.ps1  bootstrap.sh  platforms.json  setup.py
boards/: lp_mspm0g3507.yaml
cmake/: arm-none-eabi.cmake
src/: main.c
